--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
   },
   "dependencies": {
     "@modelcontextprotocol/sdk": "^1.15.0",
+    "dotenv": "^17.2.0",
+    "openai": "^5.8.3",
     "zod": "^3.25.75"
   }
 }
