--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@modelcontextprotocol/sdk": "^1.15.0",
     "dotenv": "^17.2.0",
     "openai": "^5.8.3",
+    "telegraf": "^4.16.3",
     "zod": "^3.25.75"
   }
 }
